[package]
name = "noname-rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["mp3"] }
bevy-inspector-egui = "0.19.0"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_ecs_tilemap = "0.11.0"
leafwing-input-manager = { version = "0.10.0", features = ["egui"] }
ron = "0.8.1"
serde = { version = "1.0.185", features = ["derive"] }
bevy_prototype_lyon = "0.9.0"
bevy_prototype_debug_lines = "0.11.1"
rand = "0.8.5"
bevy_rl_actions = { version = "0.1.0", path = "../bevy_rl_actions" }
bevy_tweening = "0.8.0"
noise = "0.8.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
